Remove Saturday hours - Roland's is now closed on Saturdays

--- a/contact.html
+++ b/contact.html
@@ -47,12 +47,6 @@
                     "opens": "08:00",
                     "closes": "17:00"
                 },
-                {
-                    "@type": "OpeningHoursSpecification",
-                    "dayOfWeek": "Saturday",
-                    "opens": "08:00",
-                    "closes": "12:00"
-                }
             ]
         }
     }
@@ -116,7 +110,6 @@
                         <h3>Business Hours</h3>
                         <p>
                             <strong>Monday - Friday:</strong> 8:00 AM - 5:00 PM<br>
-                            <strong>Saturday:</strong> 8:00 AM - 12:00 PM<br>
                             <strong>Sunday:</strong> Closed
                         </p>
                     </div>
@@ -230,7 +223,7 @@
                 <h3 class="display-4 text-primary">
                     <a href="tel:901-872-8473">(901) 872-8473</a>
                 </h3>
-                <p>Monday-Friday: 8AM-5PM | Saturday: 8AM-12PM</p>
+                <p>Monday-Friday: 8AM-5PM | Saturday: Closed</p>
             </div>
         </div>
     </section>
@@ -298,7 +291,7 @@
                     <h4>Contact Info</h4>
                     <p>4998 Navy Rd, Millington, TN 38053<br>
                     Phone: <a href="tel:901-872-8473">(901) 872-8473</a><br>
-                    Mon-Fri: 8AM-5PM | Sat: 8AM-12PM</p>
+                    Mon-Fri: 8AM-5PM | Saturday: Closed</p>
                 </div>
             </div>
             <hr style="border-color: rgba(255,255,255,0.2);">
