--- a/contact.html
+++ b/contact.html
@@ -208,7 +208,7 @@
                 <div class="col-lg-6">
                     <div class="faq-item mb-4">
                         <h4>Do I need an appointment?</h4>
-                        <p>While we accept walk-ins, we recommend scheduling an appointment to ensure the fastest service. Call us or use our contact form to schedule.</p>
+                        <p>While we accept walk-ins, we recommend scheduling an appointment to ensure the fastest service. Call us at (901) 872-8473 to schedule.</p>
                     </div>
                     <div class="faq-item mb-4">
                         <h4>Do you work on all vehicle makes?</h4>
