Remove all people pictures from about page and fix Saturday hours in footer

--- a/about.html
+++ b/about.html
@@ -80,7 +80,6 @@
                     <p>Roland's Tire and Automotive has been a cornerstone of the Millington community since 1965. What started as a small tire shop has grown into a full-service automotive repair facility, but our commitment to honest, reliable service has never changed.</p>
                     <p>As a family-owned and operated business, we understand the importance of trust when it comes to your vehicle. That's why we've built our reputation on transparency, fair pricing, and quality workmanship. We treat every customer like family and every vehicle as if it were our own.</p>
                     <p>Over the years, we've invested in the latest diagnostic equipment and continuous training for our technicians, ensuring we can service all makes and models with expertise and efficiency.</p>
-                    <img src="https://images.unsplash.com/photo-1600880292203-757bb62b4baf?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Roland's Tire and Automotive team" class="img-fluid rounded mt-3">
                 </div>
                 <div class="col-lg-6">
                     <h2>Our Mission</h2>
@@ -115,7 +114,6 @@
             <div class="row">
                 <div class="col-lg-4 mb-4">
                     <div class="team-member text-center">
-                        <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&auto=format&fit=crop&w=200&h=200&q=80" alt="Roland - Owner" class="rounded-circle mb-3" style="width: 200px; height: 200px; object-fit: cover;">
                         <h3>Roland</h3>
                         <p class="text-muted">Owner & Master Technician</p>
                         <p>With nearly 60 years of experience, Roland founded the shop on principles of honesty and quality service.</p>
@@ -123,7 +121,6 @@
                 </div>
                 <div class="col-lg-4 mb-4">
                     <div class="team-member text-center">
-                        <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?ixlib=rb-4.0.3&auto=format&fit=crop&w=200&h=200&q=80" alt="Service Manager" class="rounded-circle mb-3" style="width: 200px; height: 200px; object-fit: cover;">
                         <h3>Service Team</h3>
                         <p class="text-muted">ASE Certified Technicians</p>
                         <p>Our skilled technicians bring decades of combined experience in all aspects of automotive repair.</p>
@@ -131,7 +128,6 @@
                 </div>
                 <div class="col-lg-4 mb-4">
                     <div class="team-member text-center">
-                        <img src="https://images.unsplash.com/photo-1580489944761-15a19d654956?ixlib=rb-4.0.3&auto=format&fit=crop&w=200&h=200&q=80" alt="Customer Service" class="rounded-circle mb-3" style="width: 200px; height: 200px; object-fit: cover;">
                         <h3>Customer Service</h3>
                         <p class="text-muted">Front Desk Team</p>
                         <p>Our friendly staff ensures every visit is pleasant and every question is answered clearly.</p>
@@ -200,7 +196,7 @@
                     <h4>Contact Info</h4>
                     <p>4998 Navy Rd, Millington, TN 38053<br>
                     Phone: <a href="tel:901-872-8473">(901) 872-8473</a><br>
-                    Mon-Fri: 8AM-5PM | Sat: 8AM-12PM</p>
+                    Mon-Fri: 8AM-5PM | Saturday: Closed</p>
                 </div>
             </div>
             <hr style="border-color: rgba(255,255,255,0.2);">
