--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <div class="row text-center">
                 <div class="col-md-4">
                     <i class="fas fa-clock text-primary me-2"></i>
-                    <strong>Mon-Fri:</strong> 8AM-5PM | <strong>Sat:</strong> 8AM-12PM
+                    <strong>Mon-Fri:</strong> 8AM-5PM | <strong>Sat:</strong> Closed
                 </div>
                 <div class="col-md-4">
                     <i class="fas fa-phone text-primary me-2"></i>
@@ -370,7 +370,7 @@
                     <h4>Contact Info</h4>
                     <p>4998 Navy Rd, Millington, TN 38053<br>
                     Phone: <a href="tel:901-872-8473">(901) 872-8473</a><br>
-                    Mon-Fri: 8AM-5PM | Sat: 8AM-12PM</p>
+                    Mon-Fri: 8AM-5PM | Saturday: Closed</p>
                 </div>
             </div>
             <hr style="border-color: rgba(255,255,255,0.2);">
