--- a/services.html
+++ b/services.html
@@ -340,7 +340,7 @@
                     <h4>Contact Info</h4>
                     <p>4998 Navy Rd, Millington, TN 38053<br>
                     Phone: <a href="tel:901-872-8473">(901) 872-8473</a><br>
-                    Mon-Fri: 8AM-5PM | Sat: 8AM-12PM</p>
+                    Mon-Fri: 8AM-5PM | Saturday: Closed</p>
                 </div>
             </div>
             <hr style="border-color: rgba(255,255,255,0.2);">
