Major SEO and performance improvements: Enhanced local SEO schema, added service areas, Google Analytics setup, sitemap.xml, robots.txt, social media meta tags, and performance optimizations

--- a/about.html
+++ b/about.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us | Roland's Tire and Automotive - Family-Owned Since 1987</title>
-    <meta name="description" content="Learn about Roland's Tire and Automotive, a family-owned auto repair shop serving Millington, TN since 1987. ASE-certified technicians providing honest, reliable service.">
-    <meta name="keywords" content="about Roland's Tire Millington, family-owned auto repair, ASE certified mechanics Millington TN">
-    <link rel="canonical" href="https://rolandstireandautomotive.com/about.html">
+    <title>About Us | Roland's Tire and Automotive - Family-Owned Since 1965</title>
+    <meta name="description" content="Learn about Roland's Tire and Automotive, a family-owned auto repair shop serving Millington, TN since 1965. ASE-certified technicians providing honest, reliable service for 60 years.">
+    <meta name="keywords" content="about Roland's Tire Millington, family-owned auto repair, ASE certified mechanics Millington TN, tire shop history, automotive repair Memphis area">
+    <link rel="canonical" href="https://rolandstireandautomotive.com/about">
+    
+    <!-- Local SEO Meta Tags -->
+    <meta property="og:title" content="About Roland's Tire and Automotive - Family-Owned Since 1965">
+    <meta property="og:description" content="60 years of trusted auto repair in Millington, TN. Family-owned, ASE-certified, honest service.">
+    <meta property="og:image" content="logo.jpg">
+    <meta property="og:url" content="https://rolandstireandautomotive.com/about">
+    <meta property="og:type" content="website">
     
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
